# MQP-boat

./: .gitignore  converter_script.py  data.yaml  data_V1.yaml  debug_start_nodes.sh  keypresser.py  model_Tester.py  model_Trainer.py  readme.md  runRangeDector.bash  start_nodes.sh  test_onnx.py  test_yolo.py
src/imgToMotor/: CMakeLists.txt  package.xml
src/imgToMotor/install/: local_setup.sh  setup.sh
src/imgToMotor/log/: latest_build
src/imgToMotor/src/: dest_to_motorInfo.cpp  img_to_destination.cpp  motorInfo_to_GPIO.cpp  world_to_img.cpp
src/navigation/: CMakeLists.txt  setup.cfg  setup.py
src/navigation/scripts/: memory.txt  motor_action.py  motor_logic.py  remote_control.py  state_machine.py  sudden_stop.py  test_motor_action.py
src/navigation/src/: dest_to_motorInfo.cpp  motor.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/include/vision/: NetFinder.hpp
src/vision/install/: local_setup.sh  setup.sh
src/vision/log/: latest_build
src/vision/scripts/: .gitignore  MQP-ROS.code-workspace  README.dataset.txt  README.roboflow.txt  camera.py  camera_debug.py  camera_spoofer.py  data.yaml  model_trainer.py  net_finder.py  net_finder_debug.py
src/vision/scripts/Unused code/: blob_detector.py
src/vision/scripts/install/: local_setup.sh  setup.sh
src/vision/scripts/test/labels/: hdnet_107_jpg.rf.418b6c3abd4587f6b42392de58374152.txt  hdnet_109_jpg.rf.38be4e1637da179aed6eef91d4c9f5dd.txt  hdnet_111_jpg.rf.dedc4c67c070df3fe789bec367fe07aa.txt  hdnet_113_jpg.rf.38231a2e822c562176d25950be7fcaab.txt  hdnet_157_jpg.rf.6e9c1f032701263841b7f80b0e50d5db.txt  hdnet_157_jpg.rf.8f5f4ff09c036ae10bf0db5a9c0365d2.txt  hdnet_203_jpg.rf.189cf7eea92655921d17bdd7b04b955d.txt  hdnet_205_jpg.rf.4a231224defc5856bc591dc23f13012b.txt  hdnet_207_jpg.rf.5f4e71db8a40d6288102ae89aeceacfa.txt  hdnet_207_jpg.rf.b47b2570d71bb3275fabd534ab6f351e.txt  hdnet_213_jpg.rf.d3dae433a4f8dc0fa70b1ea434e7c2a1.txt  hdnet_220_jpg.rf.556857b33b9d8269cd4d68f9852db625.txt  hdnet_228_jpg.rf.57a5a3774baf0077ef203fe81ce902b4.txt  hdnet_228_jpg.rf.c575c8d6b241410d47e68794b6808d5a.txt  hdnet_229_jpg.rf.6143f5dce27b4dd5d9cb5784873eea7a.txt  hdnet_244_jpg.rf.50c787e0cae58401a0abe7aa4c589594.txt  hdnet_246_jpg.rf.9990cc7d020a8538159e9ff3cc03d92f.txt  hdnet_248_jpg.rf.6f2759c10571d9a8a00f248bbc988e65.txt  hdnet_248_jpg.rf.82a28019ea8323d2105db57f348e16dc.txt  hdnet_253_jpg.rf.a2632c78e7d74ae2c0d2b691c2d238de.txt  hdnet_305_jpg.rf.65c595c70ee982a283ab2e7caf30e40c.txt  hdnet_319_jpg.rf.a81ef21f5b4be49068b1a5c9922d24e9.txt  hdnet_325_jpg.rf.dcac4d53f57edb5719010198b98a536b.txt  hdnet_331_jpg.rf.0ad327e67dbd8b448e73b1a9319d73c0.txt  hdnet_331_jpg.rf.17da2bd8b272e551a75c1f838919d4ee.txt  hdnet_332_jpg.rf.740bb0dfb0005fce1af3706dcd98bd76.txt  hdnet_345_jpg.rf.ddfeead49cffc457341e29f3c572c686.txt  hdnet_348_jpg.rf.82a2cfdd136bf32337adae200208d5c3.txt  hdnet_348_jpg.rf.d5df3d039c39e15356819ac09c5b5289.txt  hdnet_404_jpg.rf.070dcf7517e9b5464fd75c1772109b8e.txt  hdnet_407_jpg.rf.f59b214de60e4a6afd948a215f458092.txt  hdnet_417_jpg.rf.ca5f34ffc7d168938dbfd6285474085b.txt  hdnet_441_jpg.rf.d7a2c063f31091ff95a9cab8a80aee4b.txt  hdnet_443_jpg.rf.6f70cd1f3a16112c4522aa87e03e20c7.txt  hdnet_448_jpg.rf.90e526b7b0d8607b338b4660f1e82fcc.txt  hdnet_500_jpg.rf.87cb8a222d63ba46b5d37ff3b57a3ea6.txt  hdnet_514_jpg.rf.5ec461bd427ba0593ebbf832040f8d10.txt  hdnet_523_jpg.rf.07e85fad28829f95d0894d378263ce87.txt  hdnet_525_jpg.rf.e1d1712d1d1ca5d32cb2fcd6e531ceed.txt  hdnet_618_jpg.rf.456a02349ae22d74da14b8b48949b838.txt  (+15 more)
src/vision/scripts/train/labels/: hdnet_106_jpg.rf.8212665fbb9ec192ac590af1dbf5e0c8.txt  hdnet_109_jpg.rf.8a5ae9f1398ec2988544737e27e360ef.txt  hdnet_111_jpg.rf.dae4c3d8546555f7c120b4b5b988df5c.txt  hdnet_113_jpg.rf.8f740f9ad2fde2519cdc400fcb5f1f88.txt  hdnet_115_jpg.rf.15b12de4a904296d7f58063db2d33200.txt  hdnet_115_jpg.rf.383408a2f6e7191b68805202c3d8c7ac.txt  hdnet_116_jpg.rf.312b94e52dd327d59345fcd8fb1565a6.txt  hdnet_116_jpg.rf.e6fd73bc3ed1baefd0dd6db35e2d37dd.txt  hdnet_149_jpg.rf.b7fa1bfac51bfe59e7708a465fb0ab28.txt  hdnet_159_jpg.rf.c63b918a48d1edbba7a988e1e53bd586.txt  hdnet_203_jpg.rf.b2461f8d61f45dcb1f420c17b2625387.txt  hdnet_205_jpg.rf.b354a7505fb6f78ec3b865dcf59986ae.txt  hdnet_208_jpg.rf.696979e6dc571870f82d99e0033f096a.txt  hdnet_210_jpg.rf.48a6261781f55bba23816ab35741cf4c.txt  hdnet_210_jpg.rf.9471f92551b4ad53b15d0e8fd00b661c.txt  hdnet_214_jpg.rf.1d0d3a57ec438a9b0a643b02e4de6ef0.txt  hdnet_214_jpg.rf.f9c753cb7295137e845b229429641a21.txt  hdnet_215_jpg.rf.e9205bf43a544d78632a028087bf3906.txt  hdnet_215_jpg.rf.f4a4e4762c287426478647c83cb85d49.txt  hdnet_220_jpg.rf.6135916705ed910ce6dc71a5f9403bbc.txt  hdnet_232_jpg.rf.36ef73127d48dce49fd37e7bc7c4d796.txt  hdnet_232_jpg.rf.5f42b2c2ecacc3b799a63c0bca88425b.txt  hdnet_236_jpg.rf.023e33ac29447c9cde0ccf8d48683cae.txt  hdnet_236_jpg.rf.0d54d6b7ee31c11aa56783abdcd57e27.txt  hdnet_238_jpg.rf.71e4090fe8e60ae540817eb9f5da851c.txt  (+38 more)
src/vision/scripts/valid/: labels.cache
src/vision/src/: NetFinder.cpp  camera.cpp  world_to_img.cpp
src/vision/src/install/: local_setup.sh  setup.sh
src/vision/src/log/: latest_build
src/vision/vision/: __init__.py
(+151 files in other folders)
